[gd_scene load_steps=9 format=3 uid="uid://bmm784h0woepx"]

[ext_resource type="Texture2D" uid="uid://b027uwde1yr0w" path="res://sprites/level_objects/CrateTexture5.png" id="1_4pw4k"]
[ext_resource type="Script" path="res://scripts/entities/level_objects/conditional_scenery.gd" id="1_56apt"]
[ext_resource type="Script" path="res://scripts/entity-components/hitbox_component.gd" id="2_daagk"]
[ext_resource type="Script" path="res://scripts/entity-components/condition_handler.gd" id="5_2v0hq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snfmt"]
size = Vector2(63.5, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bc0ms"]
size = Vector2(66, 66)

[sub_resource type="Animation" id="Animation_4yhpu"]
resource_name = "burning"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.396078, 0, 1), Color(1, 1, 1, 0.803922), Color(1, 0.396078, 0, 0.545098), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rp24p"]
_data = {
"burning": SubResource("Animation_4yhpu")
}

[node name="Crate" type="StaticBody2D"]
collision_layer = 32
collision_mask = 63
script = ExtResource("1_56apt")
trigger_conditions = ["burning"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_snfmt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_4pw4k")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 42
script = ExtResource("2_daagk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_bc0ms")

[node name="ConditionHandler" type="Node2D" parent="."]
script = ExtResource("5_2v0hq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rp24p")
}

[connection signal="condition_added" from="HitboxComponent" to="ConditionHandler" method="add_condition"]
[connection signal="condition_added" from="ConditionHandler" to="." method="_on_condition_handler_condition_added"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
